tests/tests/errors/2014-12.vb
'#compiler-options:/resource:name,filename,xxx
'#compiler-message:Command line error BC2014 : the value 'xxx' is invalid for option 'resource'
'#exit-code:1